--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -3,7 +3,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "fastapi-app.fullname" . }}
+  name: fastapi-app
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     {{- with .Values.ingress.annotations }}
@@ -21,9 +21,9 @@ spec:
             pathType: {{ .pathType }}
             backend:
               service:
-                name: {{ include "fastapi-app.fullname" $ }}
+                name: fastapi-service
                 port:
-                  number: {{ $.Values.service.port }}
+                  number: 80
           {{- end }}
     {{- end }}
   tls:
