--- a/values.yaml
+++ b/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: dhananjaylakkawar/heroku-alike
   pullPolicy: IfNotPresent
-  tag: "latest"
+  tag: "c9ca99e"
 
 service:
   type: ClusterIP
